--- a/Assets/AssetsPackage/Scripts/Hotfix/HotfixDemo/HotfixDemo.asmdef
+++ b/Assets/AssetsPackage/Scripts/Hotfix/HotfixDemo/HotfixDemo.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "GUID:e34a5702dd353724aa315fb8011f08c3",
         "GUID:9e97e42c28a41430880bee376c274c86",
-        "GUID:038dff00bcd140258ec2ecc4c541bea0"
+        "GUID:038dff00bcd140258ec2ecc4c541bea0",
+        "GUID:d753441e6bc3f8845ac545ae4e100f7e"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
